app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duniversity-deployment
  namespace: gateway-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: duniversity
  template:
    metadata:
      labels:
        app: duniversity
    spec:
      containers:
        - name: duniversity
          image: asadoblivion/duniversity-college-portal:v1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              mermory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---

apiVersion: v1
kind: Service
metadata:
  name: duniversity-service
  namespace: gateway-ns
spec:
  selector:
    app: duniversity
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
