mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-sql
  namespace: gateway-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: my-sql
  template:
    metadata:
      labels:
        app: my-sql
    spec:
      containers:
        - name: my-sql
          image: mariadb:latest
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: gateway-ns
spec:
  selector:
    app: my-sql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
